apps/lf-prod/gateway/homefinanceclub/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homefinanceclub
  namespace: lf-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: nginx-hfc
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: https
      port: 443
      protocol: HTTPS
      hostname: homefinanceclub.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: homefinanceclub-tls
    - name: https-www
      port: 443
      protocol: HTTPS
      hostname: www.homefinanceclub.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: homefinanceclub-tls
