apps/lf-prod/gateway/homefinanceclub/www-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homefinanceclub-www-redirect
  namespace: lf-prod
spec:
  parentRefs:
    - name: homefinanceclub
  hostnames:
    - www.homefinanceclub.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: homefinanceclub.com
            port: 443
            statusCode: 301
